# theweeklypick

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/apis/: games.py  leaderboard.py
app/models/: game.py
