[project]
name = "weekly-forcast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Maciel", email = "vvv.maciel@gmail.com"}
]
packages = [{ include = "app" }]  # Include the "app" folder here
readme = ""
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
